syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package CareerCloud.gRPC;


service SecurityRole {
	rpc ReadSecurityRole(IdRequestSecurityRole) returns (SecurityRolePayload);
	rpc CreateSecurityRole(SecurityRolePayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityRole(SecurityRolePayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityRole(SecurityRolePayload) returns (google.protobuf.Empty);
}

message IdRequestSecurityRole{
		string Id=1;
	}

	message SecurityRolePayload {
		string Id = 1;
        string Role = 2;      
        bool IsInactive = 3;

	}